feat: implement CORS configuration and update repository methods for user-based queries